--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This is a chat application created using MERN and socket.io..",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon backend/index.js --ignore './frontend/'"
+    "start": "nodemon backend/index.js"
   },
   "repository": {
     "type": "git",
