--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 PORT = 5000
 
 MONGO_URI= mongodb+srv://Dawson:dawsonsurk25@cluster0.n7kdctv.mongodb.net/?retryWrites=true&w=majority
+
+JWT_SECRET=surk
